--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "synsort"
-version = "0.1.0"
+version = "2025.12.05-0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
@@ -9,7 +9,8 @@ authors = [
 requires-python = ">=3.13"
 dependencies = []
 
-[project.scripts]
+
+[project.entry-points.console_scripts]
 synsort = "synsort.cli:main"
 
 [build-system]
