--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "synsort"
-version = "2025.12.05-0"
+version = "2025.12.05-1"
 description = "Add your description here"
 readme = "README.md"
 authors = [
@@ -10,7 +10,7 @@ requires-python = ">=3.13"
 dependencies = []
 
 
-[project.entry-points.console_scripts]
+[project.scripts]
 synsort = "synsort.cli:main"
 
 [build-system]
